# snake_2d

./: .gitignore  CMakeLists.txt  README.md
shaders/: fragment.frag  vertex.vert
src/: food.cpp  food.h  main.cpp  shader.cpp  shader.h  window.cpp  window.h
